lintian (2.5.17) UNRELEASED; urgency=low

  XXX: generate tag summary with private/generate-tag-summary

  * checks/automake.{desc,pm}:
    + [NT] Apply patch from Gautier Minster to detect
      usage of configure.in with automake.  Thanks to
      Paul Wise for the report.  (Closes: #708482)

 -- Niels Thykier <niels@thykier.net>  Wed, 21 Aug 2013 12:58:05 +0200

lintian (2.5.16) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - changelog-is-dh_make-template
      - copyright-should-refer-to-common-license-file-for-apache-2
      - debian-control-repeats-field-name-in-value
      - info-document-missing-image-file
      - license-problem-font-adobe-copyrighted-fragment
      - license-problem-font-adobe-copyrighted-fragment-no-credit
      - missing-dependency-on-libstdc++
      - quilt-patch-using-template-description
    + Removed:
      - dh_pycentral-is-obsolete
      - dh_python-is-obsolete
      - font-adobe-copyrighted-fragment
      - font-adobe-copyrighted-fragment-no-credit
      - init.d-script-call-internal-API
      - missing-dependency-on-python-central

  * checks/apache2.pm:
    + [NT] Fix F-P apache2-deprecated-auth-config for
      "AllowOverride".  Thanks to Jean-Michel Vourgère
      for the report and an initial patch.
      (Closes: #717621)
  * checks/binaries.pm:
    + [NT] Apply patch from Michael Stapelberg to exempt
      golang-go binaries from statically-linked-binary
      tag.  (Closes: #718404)
    + [NT] Permit shared libraries to not link against
      libc as long as they link against libstdc++.  This
      fixes a lot of false positive warnings for some c++
      libraries when the linker (with --as-needed)
      determines that the libc link is superfluous.
      Thanks to Maximiliano Curia for the report.
      (This is a partial fix for #719806)
    + [NT] Add experimental tag for missing dependency
      on libstdc++.
  * checks/changelog-file.{desc,pm}: