@@ -8,7 +8,9 @@ Uploaders: Josip Rodin <joy-packages@debian.org>,
            Adam D. Barratt <adam@adam-barratt.org.uk>,
            Raphael Geissert <geissert@debian.org>,
            Niels Thykier <niels@thykier.net>
-Build-Depends: binutils,
+Build-Depends: aspell,
+               aspell-en,
+               binutils,
                bzip2,
                cdbs,
                debhelper (>= 9),
@@ -38,6 +40,7 @@ Build-Depends: binutils,
                libtest-perl-critic-perl,
                libtest-pod-coverage-perl,
                libtest-pod-perl,
+               libtest-spelling-perl,
                libtest-strict-perl,
                libtest-synopsis-perl,
                libtext-levenshtein-perl,
